--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "start": "next start"
     },
     "dependencies": {
+        "framer-motion": "^6.5.1",
         "next": "latest",
         "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-intersection-observer": "^9.4.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
